Fix overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
 * {
   box-sizing: border-box;
-  line-height: 1rem;
   font-weight: 300;
+}
+
+html,
+body,
+#root {
+  height: 100%;
 }
 
 .App {
   background-color: #333;
   color: #fff;
   text-align: center;
-  min-height: 100vh;
+  min-height: 100%;
   padding: 1em;
 
   display: flex;
